<resources>
    <string name="app_name">WalletHub</string>
    <string name="walletHub">WalletHub</string>
    <string name="beInFuture">Be In Future</string>
    <string name="signUp"><u>Sign Up</u></string>
    <string name="userName">User Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="alreadyAccount">Already have an account ?</string>
    <string name="signIn">Sign In</string>
    <string name="doNotAccount">Don\'t have an account ?</string>
    <string name="forgotpassword">Forgot Password ?</string>
    <string name="update">Update</string>
    <string name="profile">Profile</string>
    <string name="aboutProject">We are developing Android application that name is WalletHub. Where users can store multiple type of useful important data and information LikeTextfiles,Documents,Video,Audio,Images,Notes(Account-no,Password,Links,Private Info)etc. In this Application we can categories media in category ( Audio, Video, Notes, Documents, Images ) and also set lable to every media and get all media by lable filter and report of all lable that how much files are there and how much images in lable.</string>
    <string name="developer">Developer</string>
    <string name="manali">Manali Patel</string>
    <string name="mEmail">manalipatel292@gmail.com</string>
    <string name="dEmail">divyeshkoisa@gmail.com</string>
    <string name="divyesh">Divyesh Koisa</string>
    <string name="anukul">Anukul Mehta</string>
    <string name="aEmail">mehtaanukul@gmail.com</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="rateUs">Rate Us</string>
    <string name="submit">Submit</string>
    <string name="signUpp">Sign Up</string>
    <string name="image">Image</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Name</string>
    <string name="nav_header_subtitle">Email</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="category">Category</string>
    <string name="details">Details</string>
    <string name="add">Add</string>
    <string name="label">Label</string>
    <string name="labelPush">Label Name</string>
    <string name="Createlabel">ADD</string>
    <string name="note">Note</string>
    <string name="ratetheService">Rate The Service</string>
    <string name="goodEnough">Good Enough</string>
    <string name="phoneNo">PhoneNo</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="emaill">anukul@gmail.com</string>
    <string name="delete">Delete</string>
    <string name="imageUpload">Upload Image</string>
    <string name="selectImg">Select Images</string>
    <string name="selectMusic">Select Music</string>
    <string name="musicUpload">Upload Music</string>
    <string name="selectVideo">Select Videos</string>
    <string name="videoUpload">Upload Video</string>
    <string name="selectDocument">Select Documents</string>
    <string name="documentsUpload">Upload Documents</string>
    <string name="MusicName">Music Name</string>
    <string name="musicDuration">Music Duration</string>
    <string name="musicSize">Music Size</string>
    <string name="audioType">Music Type</string>
    <string name="videoName">Video Name</string>
    <string name="videoDuration">Video Duration</string>
    <string name="videoType">Video Type</string>
    <string name="videoSize">Video Size</string>
    <string name="noTv">5</string>
</resources>
