<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="3dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signUpp"
            android:fontFamily="sans-serif-condensed"
            android:textSize="25dp"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:layout_gravity="center"/>
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/activity_signUp_profileIcon"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/ic_account_circle_black"
            android:layout_gravity="center"

            android:layout_marginTop="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/activity_signUp_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp"
        android:layout_centerInParent="true">
       <EditText
           android:id="@+id/activity_signUp_userNameEd"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:drawablePadding="15dp"
           android:layout_margin="3dp"
           android:hint="@string/userName"
           android:drawableStart="@drawable/ic_menu_person" />
        <EditText
            android:id="@+id/activity_signUp_phoneEd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="15dp"
            android:layout_margin="3dp"
            android:inputType="number"
            android:hint="@string/phoneNo"
            android:drawableStart="@drawable/ic_smartphone_black" />
        <EditText
            android:id="@+id/activity_signUp_emailEd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_margin="3dp"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="15dp"
            android:inputType="textEmailAddress"/>
        <EditText
            android:id="@+id/activity_signUp_passwordEd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_margin="3dp"
            android:drawableStart="@drawable/ic_vpn_key"
            android:drawablePadding="15dp"
            android:inputType="textPassword"/>

    </LinearLayout>
    <Button
        android:id="@+id/activity_signUp_signUpBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_signUp_linearLayout"
        android:layout_marginTop="35dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:text="@string/signUp"
        android:textColor="@color/colorWhite"
        android:background="@drawable/bg"
        />
    <TextView
        android:id="@+id/activity_signUp_alreadyAccountTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alreadyAccount"
        android:layout_marginTop="11dp"
        android:layout_marginLeft="80dp"
        android:layout_below="@id/activity_signUp_signUpBtn"/>
    <TextView
        android:id="@+id/activity_signUp_signInTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signIn"
        android:layout_toRightOf="@id/activity_signUp_alreadyAccountTv"
        android:layout_below="@id/activity_signUp_signUpBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        style="@style/Hyperlink"
        android:layout_marginLeft="10dp" />
</RelativeLayout>