<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<include layout="@layout/toolbar_layout"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/starfeedbackbg">
        <EditText
            android:id="@+id/activity_insert_NotesData_titleEd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title" />
        <EditText
            android:id="@+id/activity_insert_NotesData_categoryEd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/category" />
        <EditText
            android:id="@+id/activity_insert_NotesData_detailsEd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/details" />
    </LinearLayout>

    <Button
        android:id="@+id/activity_insert_NotesData_insertBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/add"
        android:textColor="@color/colorWhite"
        android:background="@drawable/bg"/>
    </RelativeLayout>
</LinearLayout>