<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.FeedbackActivity">
    <include
        layout="@layout/toolbar_layout" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ImageView
        android:id="@+id/activity_feedback_smileIcon"
        android:layout_width="100dp"
        android:layout_height="95dp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_below="@+id/activity_feedback_smileIcon"
        android:background="@drawable/starfeedbackbg"
        android:layout_centerInParent="true">
        <EditText
            android:id="@+id/activity_feedback_titleEd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:padding="15dp"/>
        <EditText
            android:id="@+id/activity_feedback_messageEd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/message"
            android:padding="15dp" />

        <TextView
            android:id="@+id/activity_feedback_titleRateTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ratetheService"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textColor="#848484"
            android:textAlignment="center"/>
        <RatingBar
            android:id="@+id/activity_feedback_rateStar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="40dp"
            android:layout_marginBottom="10dp"
            android:theme="@style/RatingBar"
            android:numStars="5"
            android:rating="3"
            android:stepSize="1"/>
        <TextView
            android:id="@+id/activity_feedback_resultRateTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/goodEnough"
            android:textAlignment="center"
            android:textSize="25sp"/>

    </LinearLayout>
    <Button
        android:id="@+id/activity_feedback_sbmtBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:text="@string/submit"
        android:textColor="@color/colorWhite"
        android:background="@drawable/bg"/>
    </RelativeLayout>
</LinearLayout>