<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.AboutActivity">

    <include layout="@layout/toolbar_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/activity_about_aboutProject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/aboutProject"
                android:textColor="@color/colorWhite" />

            <TextView
                android:id="@+id/activity_about_developerTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/activity_about_aboutProject"
                android:padding="15dp"
                android:text="@string/developer"
                android:textColor="@color/colorWhite" />

            <LinearLayout
                android:id="@+id/activity_about_mLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/activity_about_developerTv"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/man" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/activity_about_developerManaliTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/manali"
                        android:textColor="@color/colorWhite" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/mEmail"
                        android:textColor="@color/colorWhite" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/activity_about_dLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/activity_about_mLinearLayout"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/man" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/activity_about_developerDivyeshTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/divyesh"
                        android:textColor="@color/colorWhite" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/dEmail"
                        android:textColor="@color/colorWhite" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/activity_about_dLinearLayout"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/man" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/activity_about_developerAnukulTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/anukul"
                        android:textColor="@color/colorWhite" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/aEmail"
                        android:textColor="@color/colorWhite" />
                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>
</LinearLayout>