<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="3dp"
    app:cardCornerRadius="3dp"
    app:cardPreventCornerOverlap="true"
    android:layout_margin="3dp"
    app:cardBackgroundColor="@color/colorlight">
<RelativeLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">
        <TextView
            android:id="@+id/notes_custom_layout_titleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/notes_custom_layout_categoryTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textColor="@color/colorWhite"
            android:textAppearance="?android:textAppearanceSmall"/>
        <TextView
            android:id="@+id/notes_custom_layout_detailsTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/details"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="10dp"
            android:textAppearance="?android:textAppearanceSmall"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/notes_custom_layout_optionMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_more_vert_navigation_menu"
        android:layout_alignParentEnd="true"/>




</RelativeLayout>
</android.support.v7.widget.CardView>